--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -416,11 +416,11 @@
             <include layout="@layout/bottom_sheet" />
 
             <com.facebook.shimmer.ShimmerFrameLayout
-                android:background="@android:color/white"
                 android:id="@+id/shimmer"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/white"
+                android:visibility="gone"
                 app:shimmer_duration="800"
                 app:shimmer_repeat_delay="1">
 
@@ -432,16 +432,92 @@
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
-        <com.google.android.exoplayer2.ui.PlayerView xmlns:app="http://schemas.android.com/apk/res-auto"
+        <com.example.videoplayer.Player.PlayerView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/player"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@android:color/black"
+            app:auto_show="false"
             app:controller_layout_id="@layout/exo_player_control_view"
+            app:hide_on_touch="false"
             app:layout_constraintTop_toTopOf="parent"
             app:resize_mode="fill"
             app:show_buffering="when_playing"
-            app:show_shuffle_button="true"></com.google.android.exoplayer2.ui.PlayerView>
+            app:show_shuffle_button="true"
+            app:use_controller="true">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/nazadd"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:focusable="false"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintWidth_percent="0.4">
+
+                    <TextView
+                        android:id="@+id/back"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="10"
+                        android:textColor="@android:color/white"
+                        android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/back_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/white"
+                        android:text=" seconds"
+                        android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/back"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/vperedd"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:focusable="false"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintWidth_percent="0.4">
+
+                    <TextView
+                        android:id="@+id/forward"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="10"
+                        android:visibility="gone"
+                        android:textColor="@android:color/white"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/frw_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/white"
+                        android:text=" seconds"
+                        android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/forward"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </com.example.videoplayer.Player.PlayerView>
 
 
     </com.example.videoplayer.Draggable.DraggableView>
