--- a/app/src/main/res/layout/fragment_category_videos.xml
+++ b/app/src/main/res/layout/fragment_category_videos.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
+    android:padding="8dp"
     android:orientation="vertical">
 
 
@@ -11,5 +12,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible"></androidx.recyclerview.widget.RecyclerView>
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_category"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <include layout="@layout/shimmer_small_items"/>
+            <include layout="@layout/shimmer_small_items"/>
+            <include layout="@layout/shimmer_small_items"/>
+            <include layout="@layout/shimmer_small_items"/>
+            <include layout="@layout/shimmer_small_items"/>
+            <include layout="@layout/shimmer_small_items"/>
+            <include layout="@layout/shimmer_small_items"/>
+            <include layout="@layout/shimmer_small_items"/>
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
