--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,17 @@
                 app:layout_constraintRight_toLeftOf="@id/search_button"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageView
+                android:id="@+id/voice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="16dp"
+                android:src="@drawable/ic_voice"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/clear_btn"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <EditText
                 android:id="@+id/searcher_edit_text"
                 android:layout_width="0dp"
@@ -78,7 +89,7 @@
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="@id/title_tol"
-                app:layout_constraintRight_toLeftOf="@id/clear_btn"
+                app:layout_constraintRight_toLeftOf="@id/voice"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -465,6 +476,7 @@
                         android:layout_height="wrap_content"
                         android:text="10"
                         android:textColor="@android:color/white"
+                        android:layout_marginLeft="20dp"
                         android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
@@ -497,6 +509,7 @@
                         android:layout_height="wrap_content"
                         android:text="10"
                         android:visibility="gone"
+                        android:layout_marginRight="20dp"
                         android:textColor="@android:color/white"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
