--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="?attr/back"
+    tools:context=".Activities.MainActivity">
 
     <LinearLayout
         android:id="@+id/linear"
@@ -14,23 +15,27 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/navigation"
+        <com.etebarian.meowbottomnavigation.MeowBottomNavigation
+            android:id="@+id/meow"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:background="@color/colorPrimary"
-            android:forceHasOverlappingRendering="false"
-            app:itemIconTint="@color/colorNavIcon"
-            app:itemTextColor="@color/colorNavText"
-            app:menu="@menu/bottom_nav_menu" />
+            android:layout_height="wrap_content"
+            android:background="?attr/back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:mbn_backgroundBottomColor="?attr/col"
+            app:mbn_countBackgroundColor="#ff6f00"
+            app:mbn_countTextColor="#ffffff"
+            app:mbn_shadowColor="?attr/shadowColor"
+            app:mbn_defaultIconColor="?attr/tintColor"
+            app:mbn_rippleColor="?attr/col"
+            app:mbn_selectedIconColor="?attr/tintColor" />
+
     </LinearLayout>
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        style="@style/Toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/col"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -42,11 +47,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
+                android:textColor="?attr/textColor"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-
             <ImageView
                 android:id="@+id/search_button"
                 android:layout_width="wrap_content"
@@ -56,24 +60,24 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
             <ImageView
                 android:id="@+id/clear_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp"
                 android:src="@drawable/ic_clear_black_24dp"
+                android:tint="?attr/tintColor"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/search_button"
                 app:layout_constraintTop_toTopOf="parent" />
-
             <ImageView
                 android:id="@+id/voice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp"
                 android:src="@drawable/ic_voice"
+                android:tint="?attr/tintColor"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/clear_btn"
@@ -84,8 +88,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:textCursorDrawable="@drawable/color_cursor"
                 android:hint="Поиск"
                 android:inputType="textAutoComplete"
+                android:textColor="?attr/textColor"
+                android:textColorHint="?attr/textColor"
                 android:textSize="17sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -102,16 +109,17 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/linear"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"></com.example.videoplayer.ViewPager.CustomViewPager>
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
+    </com.example.videoplayer.ViewPager.CustomViewPager>
 
     <FrameLayout
         android:id="@+id/searcher"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="?attr/back"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
 
     <com.example.videoplayer.Draggable.DraggableView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -120,6 +128,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="visible"
+
         draggable_view:bottom_view_id="@+id/iv_thumbnail"
         draggable_view:enable_minimized_horizontal_alpha_effect="false"
         draggable_view:layout_constraintBottom_toBottomOf="parent"
@@ -133,10 +142,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/player"
-            android:background="@android:color/white"
+            android:background="?attr/back"
             android:onClick="onClick"
             android:visibility="visible">
-
 
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/nested_scroll"
@@ -148,11 +156,10 @@
                     android:id="@+id/bottom_constraint"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/white"
+                    android:background="?attr/back"
                     android:onClick="onClick"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp">
-
 
                     <ImageView
                         android:id="@+id/more"
@@ -160,7 +167,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
                         android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
-                        android:tint="@android:color/black"
+                        android:tint="?attr/tintColor"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -171,11 +178,11 @@
                         android:layout_marginTop="30dp"
                         android:text="Artefact - 99"
                         android:textAllCaps="false"
+                        android:textColor="?attr/textColor"
                         android:textSize="17dp"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toLeftOf="@id/more"
                         app:layout_constraintTop_toTopOf="parent" />
-
 
                     <ImageView
                         android:id="@+id/views"
@@ -183,7 +190,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:src="@drawable/ic_person_black_24dp"
-                        android:tint="@android:color/black"
+                        android:tint="?attr/tintColor"
                         app:layout_constraintLeft_toLeftOf="@id/discription"
                         app:layout_constraintTop_toBottomOf="@id/discription" />
 
@@ -193,6 +200,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:text="999 999"
+                        android:textColor="?attr/textColor"
                         android:textSize="15dp"
                         app:layout_constraintBottom_toBottomOf="@id/views"
                         app:layout_constraintLeft_toRightOf="@id/views"
@@ -205,6 +213,7 @@
                         android:layout_marginTop="15dp"
                         android:background="@android:color/transparent"
                         android:src="@drawable/ic_favorite_black"
+                        android:tint="?attr/tintColor"
                         draggable_view:layout_constraintLeft_toLeftOf="@id/views"
                         draggable_view:layout_constraintTop_toBottomOf="@id/views" />
 
@@ -214,6 +223,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="9dp"
                         android:text="210030039"
+                        android:textColor="?attr/textColor"
                         draggable_view:layout_constraintBottom_toBottomOf="@id/like"
                         draggable_view:layout_constraintLeft_toRightOf="@id/like"
                         draggable_view:layout_constraintTop_toTopOf="@id/like" />
@@ -235,6 +245,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="9dp"
                         android:text="210030039"
+                        android:textColor="?attr/textColor"
                         draggable_view:layout_constraintBottom_toBottomOf="@id/dislick"
                         draggable_view:layout_constraintLeft_toRightOf="@id/dislick"
                         draggable_view:layout_constraintTop_toTopOf="@id/dislick" />
@@ -284,6 +295,7 @@
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
                         android:text="Подписаться"
+                        android:textColor="?attr/textColor"
                         draggable_view:layout_constraintBottom_toBottomOf="@id/channel_logo"
                         draggable_view:layout_constraintRight_toRightOf="parent"
                         draggable_view:layout_constraintTop_toTopOf="@id/channel_logo" />
@@ -294,6 +306,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="13dp"
                         android:text="Make It Music"
+                        android:textColor="?attr/textColor"
                         android:textStyle="bold"
                         draggable_view:layout_constraintLeft_toRightOf="@id/channel_logo"
                         draggable_view:layout_constraintRight_toLeftOf="@+id/follow"
@@ -323,6 +336,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:visibility="gone"
+                        android:background="?attr/back"
                         draggable_view:layout_constraintLeft_toLeftOf="parent"
                         draggable_view:layout_constraintRight_toRightOf="parent"
                         draggable_view:layout_constraintTop_toBottomOf="@id/channel_logo">
@@ -333,6 +347,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="15dp"
                             android:text="24 Июля 2019"
+                            android:textColor="?attr/textColor"
                             draggable_view:layout_constraintLeft_toLeftOf="parent"
                             draggable_view:layout_constraintTop_toTopOf="parent" />
 
@@ -342,6 +357,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="6dp"
                             android:text="Artefact - 99"
+                            android:textColor="?attr/textColor"
                             draggable_view:layout_constraintLeft_toLeftOf="@id/date"
                             draggable_view:layout_constraintTop_toBottomOf="@id/date" />
 
@@ -351,6 +367,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
                             android:text="Категория"
+                            android:textColor="?attr/textColor"
                             android:textStyle="bold"
                             draggable_view:layout_constraintLeft_toLeftOf="@id/name_of_video_bottom"
                             draggable_view:layout_constraintTop_toBottomOf="@id/name_of_video_bottom" />
@@ -362,6 +379,7 @@
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="12dp"
                             android:text="Музыка и развлечения"
+                            android:textColor="?attr/textColor"
                             draggable_view:layout_constraintLeft_toRightOf="@id/category"
                             draggable_view:layout_constraintTop_toBottomOf="@id/name_of_video_bottom" />
 
@@ -380,6 +398,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
                         android:text="Следующее"
+                        android:textColor="?attr/textColor"
                         android:textSize="15sp"
                         android:textStyle="bold"
                         draggable_view:layout_constraintLeft_toLeftOf="@id/channel_logo"
@@ -398,6 +417,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="16dp"
                         android:text="Авто"
+                        android:textColor="?attr/textColor"
                         android:textSize="15sp"
                         android:textStyle="bold"
                         draggable_view:layout_constraintBottom_toBottomOf="@id/next_video"
@@ -418,8 +438,8 @@
                         android:layout_marginTop="10dp"
                         android:nestedScrollingEnabled="false"
                         app:layout_constraintBottom_toTopOf="@id/view_helper"
-                        draggable_view:layout_constraintTop_toBottomOf="@id/next_video"></androidx.recyclerview.widget.RecyclerView>
-
+                        draggable_view:layout_constraintTop_toBottomOf="@id/next_video">
+                    </androidx.recyclerview.widget.RecyclerView>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <!-- Adding bottom sheet after main content -->
@@ -440,9 +460,7 @@
 
             </com.facebook.shimmer.ShimmerFrameLayout>
 
-
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
 
         <com.example.videoplayer.Player.PlayerView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/player"
@@ -475,9 +493,9 @@
                         android:id="@+id/back"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
                         android:text="10"
                         android:textColor="@android:color/white"
-                        android:layout_marginLeft="20dp"
                         android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
@@ -488,8 +506,8 @@
                         android:id="@+id/back_txt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@android:color/white"
                         android:text=" seconds"
+                        android:textColor="@android:color/white"
                         android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toRightOf="@id/back"
@@ -508,10 +526,10 @@
                         android:id="@+id/forward"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="10"
-                        android:visibility="gone"
                         android:layout_marginRight="20dp"
+                        android:text="10"
                         android:textColor="@android:color/white"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
@@ -521,8 +539,8 @@
                         android:id="@+id/frw_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@android:color/white"
                         android:text=" seconds"
+                        android:textColor="@android:color/white"
                         android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toRightOf="@id/forward"
