--- a/app/src/main/res/layout/bottom_fragmnet.xml
+++ b/app/src/main/res/layout/bottom_fragmnet.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:id="@+id/container_frg"
+    android:background="?attr/back"
     android:onClick="onClick"
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/categories"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?attr/back">
     </androidx.recyclerview.widget.RecyclerView>
 
 
