--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -4,7 +4,7 @@
     android:id="@+id/bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="?attr/col"
     android:onClick="onClick"
     android:orientation="vertical"
     app:behavior_hideable="true"
@@ -17,11 +17,15 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:onClick="onClick"
-        app:cardBackgroundColor="@android:color/white">
+        app:cardElevation="2dp"
+        app:cardBackgroundColor="?attr/col">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="?attr/col"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
 
 
             <ImageView
@@ -29,6 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
+                android:tint="?attr/tintColor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -39,7 +44,7 @@
                 android:layout_marginLeft="30dp"
                 android:layout_weight="2"
                 android:text="Коментарии"
-                android:textColor="#444"
+                android:textColor="?attr/textColor"
                 android:textSize="18dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -48,9 +53,11 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/back"
         android:onClick="onClick">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
