--- a/app/src/main/res/layout/fragment_category_videos.xml
+++ b/app/src/main/res/layout/fragment_category_videos.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="?attr/back"
     android:padding="8dp"
     android:orientation="vertical">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/videos_in_search"
+        android:background="?attr/back"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible"></androidx.recyclerview.widget.RecyclerView>
