--- a/app/src/main/res/layout/fragment_following.xml
+++ b/app/src/main/res/layout/fragment_following.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@android:color/white"
+    android:background="?attr/back"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -14,11 +14,13 @@
         <androidx.cardview.widget.CardView
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/card"
+            android:background="?attr/back"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/channels_logo"
+                android:background="?attr/back"
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
                 app:layout_constraintTop_toTopOf="parent"></androidx.recyclerview.widget.RecyclerView>
