--- a/app/src/main/res/layout/main_items.xml
+++ b/app/src/main/res/layout/main_items.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@android:color/white"
+    android:background="?attr/back"
 
     android:layout_height="wrap_content"
     android:padding="15dp">
@@ -20,9 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:background="@android:color/black"
+        android:background="?attr/back"
         android:text="10:00"
-        android:textColor="@android:color/white"
+        android:textColor="?attr/textColor"
         app:layout_constraintBottom_toBottomOf="@id/preview"
         app:layout_constraintRight_toRightOf="@id/preview" />
 
@@ -31,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
+        android:tint="?attr/tintColor"
         android:src="@drawable/ic_more_vert_black_24dp"
         app:layout_constraintRight_toRightOf="@id/preview"
         app:layout_constraintTop_toBottomOf="@id/preview" />
@@ -38,6 +39,7 @@
     <TextView
         android:id="@+id/name_of_video"
         android:layout_width="0dp"
+        android:textColor="?attr/tintColor"
         android:layout_height="wrap_content"
         android:text="asdsahfhashdjsahdjkashdkahsdjkshajhofhhadhfhsjdfhdskfhklaskjfahsldkfhasdhfahfsjdhfka"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -49,6 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="FUNBOX"
+        android:textColor="?attr/tintColor"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name_of_video" />
 
@@ -56,13 +59,14 @@
         android:id="@+id/viewers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:tint="@android:color/black"
+        android:tint="?attr/tintColor"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_person_black_24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/channel_name" />
 
     <TextView
+        android:textColor="?attr/tintColor"
         android:id="@+id/count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -84,6 +88,7 @@
 
     <TextView
         android:id="@+id/day"
+        android:textColor="?attr/tintColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
