--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,20 +4,21 @@
     <item
         android:id="@+id/main"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="Главная" />
 
     <item
         android:id="@+id/chanels"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="Обзор" />
 
     <item
         android:id="@+id/following"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:icon="@drawable/ic_subscriptions"
+        android:title="Подписки" />
     <item
         android:id="@+id/account"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:icon="@drawable/ic_account_circle_black_24dp"
+        android:iconTint="@android:color/white"
+        android:title="Профиль" />
 
 </menu>
