--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="colorNavText">#01294b</color>
     <color name="gray">#e2e2e2</color>
     <color name="gray_trans">#80e2e2e2</color>
+
+    <color name="blackDark">@android:color/black</color>
+    <color name="black">@android:color/black</color>
+    <color name="bac">?attr/back</color>
+
 </resources>
