--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,30 +6,62 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="back">@android:color/white</item>
+        <item name="textColor">@color/blackDark</item>
+        <item name="buttonColor">@color/colorAccent</item>
+        <item name="tintColor">@color/blackDark</item>
+        <item name="shadowColor">#88333333</item>
+        <item name="col">@android:color/white</item>
+        <item name="colorControlNormal">?attr/tintColor</item>
+        <item name="android:textColorSecondary">?attr/tintColor</item>
+        <item name="android:forceDarkAllowed">true</item>
         <item name="android:windowContentTransitions">true</item>
-
+        <item name="android:windowAnimationStyle">@style/WindowAnimation</item>
     </style>
+
+
     <style name="TrackSelectionDialogThemeOverlay" parent="ThemeOverlay.AppCompat.Dialog.Alert">
         <item name="windowNoTitle">false</item>
     </style>
+
     <style name="Toolbar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
-        <!-- <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item> -->
-        <item name="android:background">@color/colorPrimary</item>
+        <item name="colorControlNormal">?attr/tintColor</item>
+        <item name="android:textColorSecondary">?attr/tintColor</item>
+        <item name="android:background">?attr/back</item>
     </style>
-    <style name="style" parent="Widget.AppCompat.SearchView">
-        <item name="android:textCursorDrawable">@android:drawable/arrow_down_float</item>
-        <item name="queryBackground">@android:color/transparent</item>
-        <item name="searchIcon">@drawable/ic_search_black_24dp</item>
-        <item name="closeIcon">@android:drawable/ic_menu_close_clear_cancel</item>
-        <item name="queryHint">Поиск</item>
-        <item name="android:imeActionId">6</item>
+
+
+    <style name="AlertDialog" parent="Base.Theme.AppCompat.Light.Dialog">
+        <item name="android:colorAccent">?attr/textColor</item>
+        <item name="android:textColor">?attr/textColor</item>
+        <item name="android:textColorPrimary">?attr/textColor</item>
+        <item name="android:background">?attr/col</item>
+        <item name="android:negativeButtonText">?attr/textColor</item>
+        <item name="android:positiveButtonText">?attr/textColor</item>
     </style>
-    <style name="AppTheme.Toolbar" parent="AppTheme">
-        <!--This line changes the color of text in Toolbar-->
-        <item name="android:textColorPrimary">@android:color/holo_green_dark</item>
-        <!--This line changes the color of icons in toolbar (back, overflow menu icons)-->
-        <item name="android:textColorSecondary">@android:color/holo_green_dark</item>
+
+    <style name="DarkTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#454141</item>
+        <item name="colorPrimaryDark">@color/blackDark</item>
+        <item name="colorAccent">#1c1c1c</item>
+        <item name="back">@color/blackDark</item>
+        <item name="textColor">@android:color/white</item>
+        <item name="buttonColor">@color/colorAccent</item>
+        <item name="colorControlNormal">?attr/tintColor</item>
+        <item name="android:textColorSecondary">?attr/tintColor</item>
+        <item name="tintColor">@android:color/white</item>
+        <item name="shadowColor">#FAFAFA</item>
+        <item name="col">#454141</item>
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowAnimationStyle">@style/WindowAnimation</item>
+    </style>
+
+
+    <style name="WindowAnimation">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
 </resources>
