--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
+
         <com.etebarian.meowbottomnavigation.MeowBottomNavigation
             android:id="@+id/meow"
             android:layout_width="match_parent"
@@ -24,10 +25,10 @@
             app:mbn_backgroundBottomColor="?attr/col"
             app:mbn_countBackgroundColor="#ff6f00"
             app:mbn_countTextColor="#ffffff"
-            app:mbn_shadowColor="?attr/shadowColor"
             app:mbn_defaultIconColor="?attr/tintColor"
             app:mbn_rippleColor="?attr/col"
-            app:mbn_selectedIconColor="?attr/tintColor" />
+            app:mbn_selectedIconColor="?attr/tintColor"
+            app:mbn_shadowColor="?attr/shadowColor" />
 
     </LinearLayout>
 
@@ -51,6 +52,7 @@
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/search_button"
                 android:layout_width="wrap_content"
@@ -60,6 +62,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/clear_btn"
                 android:layout_width="wrap_content"
@@ -71,6 +74,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/search_button"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/voice"
                 android:layout_width="wrap_content"
@@ -88,11 +92,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:textCursorDrawable="@drawable/color_cursor"
                 android:hint="Поиск"
                 android:inputType="textAutoComplete"
                 android:textColor="?attr/textColor"
                 android:textColorHint="?attr/textColor"
+                android:textCursorDrawable="@drawable/color_cursor"
                 android:textSize="17sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -109,8 +113,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/linear"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
-    </com.example.videoplayer.ViewPager.CustomViewPager>
+        app:layout_constraintTop_toBottomOf="@id/toolbar"></com.example.videoplayer.ViewPager.CustomViewPager>
 
     <FrameLayout
         android:id="@+id/searcher"
@@ -232,11 +235,11 @@
                         android:id="@+id/dislick"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:tint="?attr/tintColor"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="15dp"
                         android:background="@android:color/transparent"
                         android:src="@drawable/ic_keyboard_capslock_black_24dp"
+                        android:tint="?attr/tintColor"
                         draggable_view:layout_constraintLeft_toRightOf="@id/num_of_like"
                         draggable_view:layout_constraintTop_toBottomOf="@id/views" />
 
@@ -338,8 +341,8 @@
                         android:id="@+id/hidable"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility="gone"
                         android:background="?attr/back"
+                        android:visibility="gone"
                         draggable_view:layout_constraintLeft_toLeftOf="parent"
                         draggable_view:layout_constraintRight_toRightOf="parent"
                         draggable_view:layout_constraintTop_toBottomOf="@id/channel_logo">
@@ -441,8 +444,7 @@
                         android:layout_marginTop="10dp"
                         android:nestedScrollingEnabled="false"
                         app:layout_constraintBottom_toTopOf="@id/view_helper"
-                        draggable_view:layout_constraintTop_toBottomOf="@id/next_video">
-                    </androidx.recyclerview.widget.RecyclerView>
+                        draggable_view:layout_constraintTop_toBottomOf="@id/next_video"></androidx.recyclerview.widget.RecyclerView>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <!-- Adding bottom sheet after main content -->
@@ -548,6 +550,137 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toRightOf="@id/forward"
                         app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/after_video_end"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#cc454141"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:id="@+id/ready"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="15dp"
+                        android:text="Видео начнется через "
+                        android:textColor="@android:color/white"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/ready_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="10"
+                        android:textColor="@android:color/white"
+                        app:layout_constraintLeft_toRightOf="@id/ready"
+                        app:layout_constraintTop_toTopOf="@id/ready" />
+
+                    <ImageView
+                        android:id="@+id/close"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_marginRight="15dp"
+                        android:src="@drawable/ic_close_black_24dp"
+                        android:tint="@android:color/white"
+                        app:layout_constraintBottom_toBottomOf="@id/ready"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/ready" />
+
+                    <Button
+                        android:id="@+id/otmena"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/white"
+                        android:text="Отмена"
+                        android:textColor="@android:color/black"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginBottom="15dp"
+                        app:layout_constraintLeft_toLeftOf="@id/ready"
+                        app:layout_constraintWidth_percent="0.4" />
+
+                    <Button
+                        android:id="@+id/igrat"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/white"
+                        android:layout_marginBottom="15dp"
+                        android:text="Воспроизвести"
+                        android:textColor="@android:color/black"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toRightOf="@id/close"
+                        app:layout_constraintWidth_percent="0.4" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:padding="15dp"
+                        android:weightSum="3"
+                        app:layout_constraintBottom_toTopOf="@id/otmena"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/ready">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1.3">
+
+                            <ImageView
+                                android:id="@+id/previeww"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
+                                android:background="@android:color/black"
+                                android:src="@drawable/ic_video_label_black_24dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:id="@+id/duration"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="8dp"
+                                android:background="@android:color/black"
+                                android:text="10:00"
+                                android:textColor="@android:color/white"
+                                app:layout_constraintBottom_toBottomOf="@id/previeww"
+                                app:layout_constraintRight_toRightOf="@id/previeww" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="0dp"
+                            android:layout_height="80dp"
+                            android:layout_weight="1.7"
+                            android:paddingLeft="10dp">
+
+                            <TextView
+                                android:id="@+id/channel_names"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="FUNBOX"
+                                android:textColor="@android:color/white"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintLeft_toLeftOf="parent" />
+
+                            <TextView
+                                android:id="@+id/name_of_videos"
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                android:layout_marginTop="4dp"
+                                android:text="SHORT NEWasdlbasldbjasdajkshdalskhdjlkashdjklashdjlkashdlakjshdlkjashdlkjkhdjlakshdjlkS"
+                                android:textColor="@android:color/white"
+                                app:layout_constraintBottom_toTopOf="@id/channel_names"
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                app:layout_constraintRight_toRightOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
