--- a/app/src/main/res/layout/bottom_fragmnet.xml
+++ b/app/src/main/res/layout/bottom_fragmnet.xml
@@ -1,19 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container_frg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/container_frg"
     android:background="?attr/back"
     android:onClick="onClick"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/categories"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/back">
-    </androidx.recyclerview.widget.RecyclerView>
+        android:overScrollMode="never">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/recomedation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="?attr/textColor"
+                android:textSize="17sp"
+                android:layout_marginLeft="10dp"
+                android:text="Рекомендуем"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/another"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ЕЩЕ"
+                android:textColor="?attr/textColor"
+                android:textSize="15sp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/recomedation"
+                app:layout_constraintTop_toTopOf="@id/recomedation" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/channels"
+                android:overScrollMode="never"
+                android:background="?attr/back"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/recomedation"
+                ></androidx.recyclerview.widget.RecyclerView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_of_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"
+                app:layout_constraintTop_toBottomOf="@id/channels"></androidx.recyclerview.widget.RecyclerView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/categories"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/back"
+                android:nestedScrollingEnabled="false"
+                app:layout_constraintTop_toBottomOf="@id/list_of_category"></androidx.recyclerview.widget.RecyclerView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
