--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -38,19 +38,28 @@
         android:layout_marginLeft="60dp"
         android:text="За все время"
         app:layout_constraintLeft_toRightOf="@id/add"
-        app:layout_constraintTop_toTopOf="@id/add"/>
+        app:layout_constraintTop_toTopOf="@id/add" />
 
     <ImageView
         android:id="@+id/add_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:layout_marginRight="30dp"
         android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
         app:layout_constraintBottom_toBottomOf="@id/choiser"
         app:layout_constraintLeft_toRightOf="@id/choiser"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="20dp"
         app:layout_constraintTop_toTopOf="@id/add" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clickable_of_filter"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/add_btn"
+        app:layout_constraintLeft_toLeftOf="@id/choiser"
+        app:layout_constraintRight_toRightOf="@id/add_btn"
+        app:layout_constraintTop_toTopOf="@id/add_btn"></androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/duration"
@@ -83,15 +92,23 @@
         app:layout_constraintLeft_toRightOf="@id/choiser"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/duration" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clickable_of_filter2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/add_btn_2"
+        app:layout_constraintLeft_toLeftOf="@id/duration_txt"
+        app:layout_constraintRight_toRightOf="@id/add_btn_2"
+        app:layout_constraintTop_toTopOf="@id/add_btn_2"></androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/add_btn_2"
-        app:layout_constraintRight_toRightOf="@id/add_btn_2"
         android:layout_marginTop="30dp"
-        android:text="Применить"/>
+        android:text="Применить"
+        app:layout_constraintRight_toRightOf="@id/add_btn_2"
+        app:layout_constraintTop_toBottomOf="@id/add_btn_2" />
 
     <Button
         android:id="@+id/cancel"
