--- a/app/src/main/res/layout/fragment_following.xml
+++ b/app/src/main/res/layout/fragment_following.xml
@@ -21,6 +21,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/channels_logo"
                 android:background="?attr/back"
+                android:overScrollMode="never"
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
                 app:layout_constraintTop_toTopOf="parent"></androidx.recyclerview.widget.RecyclerView>
@@ -30,6 +31,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/videos"
             android:layout_width="match_parent"
+            android:overScrollMode="never"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
