--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,31 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="15dp"
-    android:background="?attr/back"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?attr/back"
+    android:orientation="vertical"
+    android:padding="15dp">
+
+
+    <View
+        android:id="@+id/back_of_category"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/circle"
+        android:backgroundTint="@android:color/holo_blue_bright"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/logo"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/ic_tune_black_24dp"
-        android:background="@drawable/circle"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:tint="?attr/tintColor"
+        app:layout_constraintBottom_toBottomOf="@id/back_of_category"
+        app:layout_constraintLeft_toLeftOf="@id/back_of_category"
+        app:layout_constraintRight_toRightOf="@id/back_of_category"
+        app:layout_constraintTop_toTopOf="@id/back_of_category" />
 
     <TextView
         android:id="@+id/category_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:textColor="?attr/textColor"
-        android:textAlignment="center"
-        app:layout_constraintLeft_toLeftOf="@id/logo"
         android:text="Music"
+        android:textAlignment="center"
+        android:textColor="?attr/textColor"
+        app:layout_constraintLeft_toLeftOf="@id/logo"
         app:layout_constraintRight_toRightOf="@id/logo"
-        app:layout_constraintTop_toBottomOf="@id/logo"/>
+        app:layout_constraintTop_toBottomOf="@id/logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
