--- a/app/src/main/res/layout/shimmer_activity_main.xml
+++ b/app/src/main/res/layout/shimmer_activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="?attr/col"
     android:paddingLeft="20dp"
     android:layout_marginTop="10dp"
     android:paddingRight="20dp">
@@ -11,11 +11,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="?attr/col">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="?attr/col">
 
             <ImageView
                 android:id="@+id/more"
