--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,31 +5,9 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/back"
+    android:background="#FFFFFFFF"
     tools:context=".Activities.MainActivity">
 
-    <LinearLayout
-        android:id="@+id/linear"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
-        <com.etebarian.meowbottomnavigation.MeowBottomNavigation
-            android:id="@+id/meow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/back"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:mbn_backgroundBottomColor="?attr/col"
-            app:mbn_countBackgroundColor="#ff6f00"
-            app:mbn_countTextColor="#ffffff"
-            app:mbn_defaultIconColor="?attr/tintColor"
-            app:mbn_rippleColor="?attr/col"
-            app:mbn_selectedIconColor="?attr/tintColor"
-            app:mbn_shadowColor="?attr/shadowColor" />
-    </LinearLayout>
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -49,8 +27,8 @@
                 android:text=""
                 android:textColor="?attr/textColor"
                 android:textStyle="bold"
-                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
@@ -112,8 +90,23 @@
         android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/linear"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+
+    <com.etebarian.meowbottomnavigation.MeowBottomNavigation
+        android:id="@+id/meow"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:mbn_backgroundBottomColor="?attr/col"
+        app:mbn_countBackgroundColor="@android:color/holo_blue_bright"
+        app:mbn_countTextColor="#ffffff"
+        app:mbn_defaultIconColor="?attr/tintColor"
+        app:mbn_rippleColor="?attr/col"
+        app:mbn_selectedIconColor="?attr/tintColor"
+        app:mbn_shadowColor="?attr/shadowColor" />
 
     <FrameLayout
         android:id="@+id/searcher"
@@ -164,50 +157,59 @@
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp">
 
-                    <ImageView
-                        android:id="@+id/more"
-                        android:layout_width="wrap_content"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/clickable_of_title"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
-                        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
-                        android:tint="?attr/tintColor"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        app:layout_constraintTop_toTopOf="parent">
 
-                    <TextView
-                        android:id="@+id/discription"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
-                        android:text="Artefact - 99"
-                        android:textAllCaps="false"
-                        android:textColor="?attr/textColor"
-                        android:textSize="17dp"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toLeftOf="@id/more"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        <ImageView
+                            android:id="@+id/more"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
+                            android:tint="?attr/tintColor"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
-                    <ImageView
-                        android:id="@+id/views"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:src="@drawable/ic_person_black_24dp"
-                        android:tint="?attr/tintColor"
-                        app:layout_constraintLeft_toLeftOf="@id/discription"
-                        app:layout_constraintTop_toBottomOf="@id/discription" />
+                        <TextView
+                            android:id="@+id/discription"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="Artefact - 99"
+                            android:textAllCaps="false"
+                            android:textColor="?attr/textColor"
+                            android:textSize="17dp"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toLeftOf="@id/more"
+                            app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/count_of_views"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="999 999"
-                        android:textColor="?attr/textColor"
-                        android:textSize="15dp"
-                        app:layout_constraintBottom_toBottomOf="@id/views"
-                        app:layout_constraintLeft_toRightOf="@id/views"
-                        app:layout_constraintTop_toTopOf="@id/views" />
+                        <ImageView
+                            android:id="@+id/views"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:src="@drawable/ic_person_black_24dp"
+                            android:tint="?attr/tintColor"
+                            app:layout_constraintLeft_toLeftOf="@id/discription"
+                            app:layout_constraintTop_toBottomOf="@id/discription" />
+
+                        <TextView
+                            android:id="@+id/count_of_views"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:text="999 999"
+                            android:textColor="?attr/textColor"
+                            android:textSize="15dp"
+                            app:layout_constraintBottom_toBottomOf="@id/views"
+                            app:layout_constraintLeft_toRightOf="@id/views"
+                            app:layout_constraintTop_toTopOf="@id/views" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                     <ImageButton
                         android:id="@+id/like"
@@ -217,8 +219,8 @@
                         android:background="@android:color/transparent"
                         android:src="@drawable/ic_favorite_black"
                         android:tint="?attr/tintColor"
-                        draggable_view:layout_constraintLeft_toLeftOf="@id/views"
-                        draggable_view:layout_constraintTop_toBottomOf="@id/views" />
+                        draggable_view:layout_constraintLeft_toLeftOf="@id/clickable_of_title"
+                        draggable_view:layout_constraintTop_toBottomOf="@id/clickable_of_title" />
 
                     <TextView
                         android:id="@+id/num_of_like"
@@ -241,7 +243,7 @@
                         android:src="@drawable/ic_keyboard_capslock_black_24dp"
                         android:tint="?attr/tintColor"
                         draggable_view:layout_constraintLeft_toRightOf="@id/num_of_like"
-                        draggable_view:layout_constraintTop_toBottomOf="@id/views" />
+                        draggable_view:layout_constraintTop_toBottomOf="@id/clickable_of_title" />
 
                     <TextView
                         android:id="@+id/num_of_dis"
@@ -595,11 +597,11 @@
                         android:id="@+id/otmena"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="15dp"
                         android:background="@android:color/white"
                         android:text="Отмена"
                         android:textColor="@android:color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:layout_marginBottom="15dp"
                         app:layout_constraintLeft_toLeftOf="@id/ready"
                         app:layout_constraintWidth_percent="0.4" />
 
@@ -607,8 +609,8 @@
                         android:id="@+id/igrat"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/white"
                         android:layout_marginBottom="15dp"
+                        android:background="@android:color/white"
                         android:text="Воспроизвести"
                         android:textColor="@android:color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
