--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="?attr/back"
     android:orientation="vertical"
     android:padding="15dp">
 
 
-    <View
+    <ImageView
         android:id="@+id/back_of_category"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:background="@drawable/circle"
         android:backgroundTint="@android:color/holo_blue_bright"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -19,8 +19,8 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:src="@drawable/ic_tune_black_24dp"
         android:tint="?attr/tintColor"
         app:layout_constraintBottom_toBottomOf="@id/back_of_category"
@@ -36,8 +36,8 @@
         android:text="Music"
         android:textAlignment="center"
         android:textColor="?attr/textColor"
-        app:layout_constraintLeft_toLeftOf="@id/logo"
-        app:layout_constraintRight_toRightOf="@id/logo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
