--- a/app/src/main/res/layout/item_category_logos.xml
+++ b/app/src/main/res/layout/item_category_logos.xml
@@ -3,6 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:padding="10dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
     android:orientation="vertical">
 
     <ImageView
