--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/back"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:orientation="vertical"
     android:paddingTop="8dp"
-    android:paddingBottom="8dp"
-    android:orientation="vertical">
+    android:paddingBottom="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:weightSum="3">
+        android:weightSum="3"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
@@ -21,10 +22,10 @@
             android:layout_weight="1.3">
 
             <ImageView
-                android:background="@android:color/black"
                 android:id="@+id/preview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/black"
                 android:src="@drawable/ic_video_label_black_24dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -43,9 +44,9 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
-            android:paddingLeft="10dp"
             android:layout_height="80dp"
-            android:layout_weight="1.7">
+            android:layout_weight="1.7"
+            android:paddingLeft="10dp">
 
 
             <ImageView
@@ -57,6 +58,7 @@
                 android:tint="?attr/tintColor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent" />
+
             <ImageButton
                 android:id="@+id/vert"
                 android:layout_width="wrap_content"
@@ -65,24 +67,25 @@
                 android:src="@drawable/ic_more_vert_black_24dp"
                 android:tint="?attr/tintColor"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:textColor="?attr/textColor"
                 android:text="1500"
+                android:textColor="?attr/textColor"
                 app:layout_constraintLeft_toRightOf="@id/viewers"
                 app:layout_constraintTop_toTopOf="@id/viewers" />
+
             <View
                 android:id="@+id/view"
                 android:layout_width="1dp"
                 android:layout_height="0dp"
                 android:layout_marginLeft="5dp"
-                android:textColor="?attr/textColor"
                 android:background="@android:color/darker_gray"
+                android:textColor="?attr/textColor"
                 app:layout_constraintBottom_toBottomOf="@id/count"
                 app:layout_constraintLeft_toRightOf="@id/count"
                 app:layout_constraintTop_toTopOf="@id/count" />
@@ -91,31 +94,32 @@
                 android:id="@+id/day"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="?attr/textColor"
                 android:layout_marginLeft="5dp"
                 android:text="18 chasov nazad"
-                app:layout_constraintRight_toLeftOf="@id/vert"
+                android:textColor="?attr/textColor"
                 app:layout_constraintLeft_toRightOf="@id/view"
+                app:layout_constraintRight_toLeftOf="@id/vert"
                 app:layout_constraintTop_toTopOf="@id/viewers" />
+
             <TextView
                 android:id="@+id/channel_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="FUNBOX"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:textColor="?attr/textColor"
-                app:layout_constraintBottom_toTopOf="@id/viewers" />
+                app:layout_constraintBottom_toTopOf="@id/viewers"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
             <TextView
-                android:layout_marginTop="4dp"
                 android:id="@+id/name_of_video"
-                android:textColor="?attr/textColor"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginTop="4dp"
                 android:text="SHORT NEWS"
-                app:layout_constraintRight_toLeftOf="@id/vert"
-                app:layout_constraintLeft_toLeftOf="parent"
+                android:textColor="?attr/textColor"
                 app:layout_constraintBottom_toTopOf="@id/channel_name"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/vert"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
