--- a/app/src/main/res/layout/list_view_items.xml
+++ b/app/src/main/res/layout/list_view_items.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/back"
+    android:foreground="?android:attr/selectableItemBackground"
     android:padding="10dp">
 
 
