--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -77,6 +77,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"
                         android:src="@drawable/ic_settings"
+                        android:foreground="?android:attr/selectableItemBackground"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/image" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
