--- a/app/src/main/res/layout/main_items.xml
+++ b/app/src/main/res/layout/main_items.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="?attr/back"
     android:layout_height="wrap_content"
+    android:background="?attr/back"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     android:padding="15dp">
 
     <ImageView
@@ -30,17 +32,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:tint="?attr/tintColor"
+        android:foreground="?android:attr/selectableItemBackground"
         android:src="@drawable/ic_more_vert_black_24dp"
+        android:tint="?attr/tintColor"
         app:layout_constraintRight_toRightOf="@id/preview"
         app:layout_constraintTop_toBottomOf="@id/preview" />
 
     <TextView
         android:id="@+id/name_of_video"
         android:layout_width="0dp"
-        android:textColor="?attr/tintColor"
         android:layout_height="wrap_content"
         android:text="asdsahfhashdjsahdjkashdkahsdjkshajhofhhadhfhsjdfhdskfhklaskjfahsldkfhasdhfahfsjdhfka"
+        android:textColor="?attr/tintColor"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/vert"
         app:layout_constraintTop_toBottomOf="@+id/preview" />
@@ -58,19 +61,19 @@
         android:id="@+id/viewers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:tint="?attr/tintColor"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_person_black_24dp"
+        android:tint="?attr/tintColor"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/channel_name" />
 
     <TextView
-        android:textColor="?attr/tintColor"
         android:id="@+id/count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:text="1500"
+        android:textColor="?attr/tintColor"
         app:layout_constraintBottom_toBottomOf="@id/viewers"
         app:layout_constraintLeft_toRightOf="@id/viewers"
         app:layout_constraintTop_toBottomOf="@id/channel_name" />
@@ -87,11 +90,11 @@
 
     <TextView
         android:id="@+id/day"
-        android:textColor="?attr/tintColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:text="18 chasov nazad"
+        android:textColor="?attr/tintColor"
         app:layout_constraintBottom_toBottomOf="@id/viewers"
         app:layout_constraintLeft_toRightOf="@id/view"
         app:layout_constraintTop_toBottomOf="@id/channel_name" />
