--- a/app/src/main/res/layout/bottom_fragmnet.xml
+++ b/app/src/main/res/layout/bottom_fragmnet.xml
@@ -62,6 +62,8 @@
                 android:layout_height="wrap_content"
                 android:background="?attr/back"
                 android:nestedScrollingEnabled="false"
+                android:clipToPadding="false"
+                android:paddingBottom="60dp"
                 app:layout_constraintTop_toBottomOf="@id/list_of_category"></androidx.recyclerview.widget.RecyclerView>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
