--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.recyclerview.widget.RecyclerView
+            <com.example.videoplayer.Layouts.ExoPlayerRecyclerView
                 android:id="@+id/recycler"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -24,7 +24,7 @@
                 android:clipToPadding="false"
                 android:paddingBottom="60dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"></androidx.recyclerview.widget.RecyclerView>
+                app:layout_constraintTop_toTopOf="parent"></com.example.videoplayer.Layouts.ExoPlayerRecyclerView>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
