--- a/app/src/main/res/layout/main_items.xml
+++ b/app/src/main/res/layout/main_items.xml
@@ -8,11 +8,25 @@
     android:foreground="?android:attr/selectableItemBackground"
     android:padding="15dp">
 
-    <ImageView
-        android:id="@+id/preview"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:src="@drawable/ic_video_label_black_24dp"
+        android:adjustViewBounds="true"
+        android:background="@android:color/black"
+        android:gravity="center"
+        android:scaleType="center"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:id="@+id/preview"
+        android:scaleType="centerCrop"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
